--- a/client/styles/_carousel.sass
+++ b/client/styles/_carousel.sass
@@ -38,7 +38,10 @@
   left: 0
   right: 0
   opacity: 0
-  transition: opacity 0.5s
+  visibility: hidden
+  transition: visibility 0s linear 0.5s, opacity 0.5s
 
 .carousel-item--active
   opacity: 1
+  visibility: visible
+  transition: visibility 0s linear 0s, opacity 0.5s
