--- a/client/styles/_homepage.sass
+++ b/client/styles/_homepage.sass
@@ -286,6 +286,7 @@ $homepage-max-width: 1084px
   +mobile
     flex-direction: column
   .button
+    max-width: 100%
     width: 280px
     margin: 10px
     +mobile
