--- a/client/styles/_landing.sass
+++ b/client/styles/_landing.sass
@@ -53,6 +53,8 @@
     +mobile
       flex-direction: column-reverse
   img
+    +mobile
+      padding: 0 7px
     +desktop
       width: 313px
       margin-right: 86px
@@ -123,8 +125,6 @@ $learn-carousel-height: 465px
 .homepage__jobs-container
   .carousel
     height: 450px
-  .homepage__feature-ctas
-    margin-top: -6px
 
   .card
     border: none
