--- a/client/styles/_navbar.sass
+++ b/client/styles/_navbar.sass
@@ -1,5 +1,5 @@
 $logo-width: 324px
-$engineers-menu-offset: 434px
+$engineers-menu-offset: 654px
 
 .navbar
   border-bottom: #dedede 1px solid
